# voice_agent

./: README.md  TROUBLESHOOTING.md  get_python_cmd.sh  install_dependencies.sh  process_speech.py  process_with_gpt.py  pyproject.toml  setup_keybindings.sh  test.py  test_append_mode.sh  test_command_conversion.sh  test_terminal_detection.sh  toggle_dictation.sh  toggle_dictation_append.sh  whisper_client.py  whisper_server.py
